--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -16,8 +16,9 @@
     .projects-container {
       display: grid;
       place-items: center;
+      /* max-width: 100%; */
       /* margin-top: 25px; */
-      /* margin: -100%; */
+      /* margin: 100%; */
       /* height: 5px; */
       /* border: 1px solid red; */
     }
@@ -34,10 +35,6 @@
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
       background-color: rgb(219, 219, 219);
       /* border: 1px solid red; */
-    }
-    .header-desc {
-      margin-bottom: 5%;
-      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
     }
     .title {
       display: grid;
@@ -73,71 +70,48 @@
     .project {
       display: grid;
       place-items: center;
-      
-      /* border: 1px solid red; */
-    }
-    h1 {
-      font-size: 50px;
-      margin: 10%;
-      margin-top: 350px;
-      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
-      /* border: 1px solid red; */
-    }
-    h2 {
-      display: grid;
-      place-items: center;
-      text-align: center;
-      margin-bottom: 50px;
-      padding: 20px;
-      font-size: 25px;
       /* border: 1px solid red; */
     }
     .project-img {
       width: 400px;
-     height: 300px;
+      height: 300px;
       margin-bottom: 5%;
       border: 3px solid white;
     }
     .github-link {
       display: grid;
       place-items: center;
-      padding: 0px 18px;
-      /* width: 100vw; */
-      margin: 15px 75px;
+      margin: 0px 68px;
+      height: 70px;
       text-align: center;
+      /* border: 1px solid red; */
     }
     .demo-link {
       display: grid;
       place-items: center;
-      padding: 0px 25px;
-      /* width: 100vw; */
-      margin: 15px 75px;
+      margin: 0px 75px;
+      height: 70px;
       text-align: center;
+      /* border: 1px solid red; */
     }
   </style>
   <body>
-    <section>
-      <nav>
-        <div class="home-button">
-          <div class="dropdown" data-dropdown>
-            <button class="link" data-dropdown-button>
-              <i class="fa-solid fa-clipboard-list" data-dropdown-button></i>
-            </button>
-            <div class="dropdown-menu">
-              <a href="./home.html"
-                ><i class="fa-solid fa-house-chimney"></i
-              ></a>
-              <a href="./contact.html"
-                ><i class="fa-solid fa-address-book"></i
-              ></a>
-              <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
-            </div>
-          </div>
+    <nav class="home-button">
+      <div class="dropdown" data-dropdown>
+        <button class="link" data-dropdown-button>
+          <i class="fa-solid fa-clipboard-list" data-dropdown-button></i>
+        </button>
+        <div class="dropdown-menu">
+          <a href="./home.html"><i class="fa-solid fa-house-chimney"></i></a>
+          <a href="./contact.html"><i class="fa-solid fa-address-book"></i></a>
+          <a href="./blog.html"><i class="fa-solid fa-comment-dots"></i></a>
         </div>
-      </nav>
+      </div>
+    </nav>
+    <section>
       <div class="projects-container">
-        <h1>Projects</h1>
-        <h2 class="header-desc">
+        <h1 class="page-title">Projects</h1>
+        <h2 class="page-desc">
           Here are some projects that I have worked on in the past! Feel free
           to contact me regarding any more information on them.
         </h2>
@@ -203,5 +177,6 @@
         </div>
       </div>
     </section>
+    <section class="page-bottom"></section>
   </body>
 </html>
