--- a/Pages/home.html
+++ b/Pages/home.html
@@ -234,8 +234,8 @@
           <ul class="skill-list">
             <li>Critical Thinking</li>
             <li>HTML/CSS</li>
+            <li>JavaScript</li>
             <li>Java Programming</li>
-            <li>Python</li>
           </ul>
         </div>
       </div>
