--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -172,6 +172,52 @@
                   >
                 </button>
               </div>
+              <div class="project">
+                <h2 class="header-block">#3</h2>
+                <h2 class="title two">Dictionary API</h2>
+                <!-- <img
+                  class="project-img"
+                  src="image"
+                  alt="PROJECT-IMG"
+                /> -->
+                <p class="project-desc">
+                  This is my first API! I used a dictionary database to hold about 80,000 english words with their definitions. When in use, a user can input any word and they will be given every definition for that word that is in the database.
+                </p>
+                
+                <button class="button-links">
+                  <a
+                    class="github-link"
+                    href="https://github.com/nsblount111300/Dictionary-API"
+                    >GitHub</a
+                  >
+                </button>
+              </div>
+              <div class="project">
+                <h2 class="header-block">#4</h2>
+                <h2 class="title two">Dictionary App</h2>
+                <img
+                  class="project-img"
+                  src=""
+                  alt="PROJECT-IMG"
+                />
+                <p class="project-desc">
+                  This app allows a user to input any word that is in the database and it will respond with every definition for that word. This app uses my own API that I made in Project #3!
+                </p>
+                <button class="button-links">
+                  <a
+                    class="demo-link"
+                    href="https://nb-dictionary-app.netlify.app/"
+                    >Demo</a
+                  >
+                </button>
+                <button class="button-links">
+                  <a
+                    class="github-link"
+                    href="https://github.com/nsblount111300/Dictionary-App"
+                    >GitHub</a
+                  >
+                </button>
+              </div>
             </div>
           </div>
         </div>
