--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -28,7 +28,7 @@
       font-size: 40px;
       color: black;
       border-radius: 0.1rem;
-      margin-top: 20%;
+      /* margin-top: 20%; */
       margin-bottom: 10%;
       padding: 10px 150px;
       box-shadow: 4px 5px 10px 3px rgba(0, 0, 0, 0.7);
@@ -53,7 +53,7 @@
       margin-top: 40px;
       margin-bottom: 15%;
       text-align: center;
-      font-size: 25px;
+      font-size: 125%;
       font-family: monospace;
       text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
       /* border: 1px solid red; */
