--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -145,7 +145,8 @@
                 >
               </button>
               </div> 
-              <div class="project">
+              <!-- THIS ISN'T WORKING FOR SOME REASON -->
+              <!-- <div class="project">
                 <h2 class="header-block">#2</h2>
                 <h2 class="title two">Song Lyric Finder</h2>
                 <img
@@ -171,9 +172,9 @@
                     >GitHub</a
                   >
                 </button>
-              </div>
+              </div> -->
               <div class="project">
-                <h2 class="header-block">#3</h2>
+                <h2 class="header-block">#2</h2>
                 <h2 class="title two">Dictionary API</h2>
                 <!-- <img
                   class="project-img"
@@ -192,7 +193,8 @@
                   >
                 </button>
               </div>
-              <div class="project">
+              <!-- THIS ISN'T WORKING FOR SOME REASON -->
+              <!-- <div class="project">
                 <h2 class="header-block">#4</h2>
                 <h2 class="title two">Dictionary App</h2>
                 <img
@@ -217,7 +219,7 @@
                     >GitHub</a
                   >
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
