--- a/index.html
+++ b/index.html
@@ -11,76 +11,77 @@
     ></script>
     <script src="menu.js" defer></script>
     <title>Nash's Portfolio - Launchpad</title>
-  </head>
-  <style>
-    :root {
-      /* --main-color: rgb(65, 121, 206); */
-      --main-color: rgb(230, 94, 94);
-    }
+    <style>
+      :root {
+        /* --main-color: rgb(65, 121, 206); */
+        --main-color: rgb(230, 94, 94);
+      }
 
-    h1 {
-      /* color: white; */
-      display: grid;
-      place-items: center;
-      margin: auto;
-      padding: auto;
-      /* margin-top: 25px; */
-      /* width: 50vw; */
-      /* height: 9.5vh; */
-      border: 1.5px solid white;
-      border-radius: 0.25rem;
-      box-shadow: 0px 10px 20px 7px rgba(0, 0, 0, 0.31);
-    }
-    h2 {
-      color: white;
-      display: grid;
-      place-items: center;
-      /* margin: 10%; */
-      margin-top: 250px;
-      margin-left: 20px;
-      width: 90%;
-      /* height: 20vh; */
-      text-align: center;
-      font-style: italic;
-      /* border: 1px solid red; */
-      text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
-    }
-    p {
-      color: var(--main-color);
-      display: grid;
-      place-items: center;
-      margin-top: 30px;
-      /* margin-bottom: 100px; */
-      /* border: 1px solid red; */
-      font-style: italic;
-      text-shadow: 5px 11px 6px rgba(0, 0, 0, 0.31);
-    }
-    .fa-arrows-turn-right {
-      display: grid;
-      place-items: center;
-      margin-top: -4px;
-      transform: scale(1);
-    }
-    .arrow {
-      position: fixed;
-      top: 70px;
-      left: 56px;
-      width: 300px;
-      height: 10vh;
-      margin-bottom: 0px;
-      z-index: 5;
-      background-color: rgb(26, 26, 26);
-    }
-    .quote {
-      margin-bottom: -100px;
-    }
-  </style>
+      h1 {
+        /* color: white; */
+        display: grid;
+        place-items: center;
+        margin: auto;
+        /* margin-top: 25px; */
+        /* width: 50vw; */
+        /* height: 9.5vh; */
+        border: 1.5px solid white;
+        border-radius: 0.25rem;
+        box-shadow: 0px 10px 20px 7px rgba(0, 0, 0, 0.31);
+      }
+      h2 {
+        color: white;
+        display: grid;
+        place-items: center;
+        /* margin: 10%; */
+        margin-top: 250px;
+        margin-left: 20px;
+        width: 90%;
+        /* height: 20vh; */
+        text-align: center;
+        font-style: italic;
+        /* border: 1px solid red; */
+        text-shadow: 5px 7px 4px rgba(0, 0, 0, 0.31);
+      }
+      p {
+        color: var(--main-color);
+        display: grid;
+        place-items: center;
+        margin-top: 30px;
+        /* margin-bottom: 100px; */
+        /* border: 1px solid red; */
+        font-style: italic;
+        text-shadow: 5px 11px 6px rgba(0, 0, 0, 0.31);
+      }
+      .fa-arrows-turn-right {
+        display: grid;
+        place-items: center;
+        margin-top: -4px;
+        transform: scale(1);
+      }
+      .arrow {
+        position: fixed;
+        top: 70px;
+        /* left: 56px; */
+        width: 300px;
+        height: 10vh;
+        margin-bottom: 0px;
+        z-index: 5;
+        background-color: rgb(26, 26, 26);
+      }
+      .quote {
+        margin-bottom: -100px;
+      }
+    </style>
+  </head>
   <body>
-    <h1 class="arrow">
-      <a href="./Pages/home.html"
-        ><i class="fa-solid fa-arrows-turn-right"></i
-      ></a>
-    </h1>
+    <div class="home-button">
+      <h1 class="arrow">
+        <a href="./Pages/home.html"
+          ><i class="fa-solid fa-arrows-turn-right"></i
+        ></a>
+      </h1>
+    </div>
     <div class="quote">
       <h2>
         "It is often the small steps, not the giant leaps, that bring about the
